Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjObjectRetText.quorum
class Main
    action Main
        Yoda<Text, Text, Object> yoda
        Object y = yoda:useForce("green", "green")
        output "passed"
     end
end
