Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriUndefinedRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, undefined> yoda
        boolean y = yoda("green", "green", true)
     end
end
